--- a/index.html
+++ b/index.html
@@ -27,6 +27,47 @@
 
 </head>
 <body>
-    
+    <header>
+
+    </header>
+    <!-- main  content  -->
+    <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
+        <!-- header section  -->
+
+        <header class="flex pt-10 mb-20">
+            <div>
+              <h1 class="text-5xl md:text-7xl">  It's good <br>
+                tea time at <br>
+                The Tea House</h1>
+                <p class="text-gray-500">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.</p>
+                <br>
+                <button class="bg-gradient-to-r from-orange-500 to-red-500 px-5 py-3 rounded-lg text-white font-bold">Explore More <i class="fa-solid fa-arrow-right text-xl -rotate-45"></i></button>
+            </div>
+            <!-- image section -->
+            <div class="relative">
+                <!-- image -->
+                 <div>
+                    <img class="w-full" src="/images/banner.png" alt="">
+                 </div>
+                 <!-- card  -->
+                  <div class="absolute top-20 md:top-80 md:left-32 lg:left-28 flex items-center bg-white shadow-lg px-2 py-2 md:px-10 lg:py-4 rounded-lg">
+                    <!-- icon  -->
+                     <div>
+                        <i class="fa-solid fa-star text-2xl text-amber-500"></i>
+                     </div>
+                     <!-- text  -->
+                      <div class="ml-2">
+                        <h2 class="lg:text-2xl font-bold">5.00</h2>
+                        <p class="text-gray-500">Trust Pilot Rating</p>
+                      </div>
+                  </div>
+            </div>
+        </header>
+        
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
