review section started

--- a/index.html
+++ b/index.html
@@ -141,6 +141,21 @@
           </div>
 
          </section>
+         <!-- review section -->
+          <section class="mb-24">
+            <div class="h-32 bg-gradient-to-r from-orange-500 to-red-500 rounded-xl grid grid-cols-1 lg:grid-cols-2 text-white px7 md:px-16">
+              <!-- text Section -->
+
+
+
+
+
+
+
+
+            </div>
+
+          </section>
     </main>
     <footer>
 
